vehicle/tests/golden/error/typing/incorrectTensorLength/incorrectTensorLength.vcl
tensor : Tensor Rat [2]
tensor = [1]
